--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -10,7 +10,28 @@
         <title>Hello World</title>
     </head>
     <body>
+    <p></p>
+        <button id="record">record</button>
+
         <script type="text/javascript" src="cordova.js"></script>
         <script type="text/javascript" src="js/index.js"></script>
+
+        <script>
+          var mediaFile;
+          function captureSuccess(mf) {
+            alert("capture successful");
+            mediaFile = mf
+            m = new Media(mediaFile[0].fullPath)
+            m.play()
+          }
+          function captureError() {
+            alert("capture error");
+          }
+          document.getElementById("record").onclick = function () {
+            navigator.device.capture.captureAudio(
+              captureSuccess, captureError, {}
+            )
+          }
+        </script>
     </body>
 </html>
