--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -10,28 +10,16 @@
         <title>Hello World</title>
     </head>
     <body>
-    <p></p>
+        <p></p>
         <button id="record">record</button>
 
         <script type="text/javascript" src="cordova.js"></script>
-        <script type="text/javascript" src="js/index.js"></script>
-
+        <script src="js/promise.js"></script>
+        <script src="js/parse.js"></script>
+        <script src="js/record_parse_file.js"></script>
         <script>
-          var mediaFile;
-          function captureSuccess(mf) {
-            alert("capture successful");
-            mediaFile = mf
-            m = new Media(mediaFile[0].fullPath)
-            m.play()
-          }
-          function captureError() {
-            alert("capture error");
-          }
-          document.getElementById("record").onclick = function () {
-            navigator.device.capture.captureAudio(
-              captureSuccess, captureError, {}
-            )
-          }
+          Parse.initialize("ia2zOg22XLuFrpYUQymWXaUOWtS3CtSE8C6uEzXJ", "Q0BHdrjBtJJS5tz2ulTXGLcMWo6wUc2p9txqgIHA");
         </script>
+        <script type="text/javascript" src="js/index.js"></script>
     </body>
 </html>
