--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -12,7 +12,7 @@
     <body>
         <p></p>
         <button id="record">record</button>
-
+        <audio id="audio" controls="contorls" src="http://files.parsetfss.com/02e13038-7d6c-4fe9-8f57-aa0bf034f3df/tfss-4d3ecd8d-84ec-4eed-b889-d0c7687e7ea4-recording.wav" autoplay></audio>
         <script type="text/javascript" src="cordova.js"></script>
         <script src="js/promise.js"></script>
         <script src="js/parse.js"></script>
@@ -21,5 +21,6 @@
           Parse.initialize("ia2zOg22XLuFrpYUQymWXaUOWtS3CtSE8C6uEzXJ", "Q0BHdrjBtJJS5tz2ulTXGLcMWo6wUc2p9txqgIHA");
         </script>
         <script type="text/javascript" src="js/index.js"></script>
+
     </body>
 </html>
