--- a/www/index.html
+++ b/www/index.html
@@ -11,8 +11,9 @@
     </head>
     <body>
         <p></p>
+        <audio id="audio" controls="contorls" autoplay></audio><div> </div>
         <button id="record">record</button>
-        <audio id="audio" controls="contorls" src="http://files.parsetfss.com/02e13038-7d6c-4fe9-8f57-aa0bf034f3df/tfss-4d3ecd8d-84ec-4eed-b889-d0c7687e7ea4-recording.wav" autoplay></audio>
+        <button id="next" class="hidden">next</button>
         <script type="text/javascript" src="cordova.js"></script>
         <script src="js/promise.js"></script>
         <script src="js/parse.js"></script>
