--- a/proto.html
+++ b/proto.html
@@ -197,8 +197,7 @@ force.on("tick", function(e) {
       .attr("cy", function(d) { return d.y; });
 });
 
-svg.selectAll("circle")
-	.data(data)
+d3.select("svg")
 	.enter().append("circle")
 	.attr("cx", 150)
 	.attr("cy", 150)
