--- a/proto.html
+++ b/proto.html
@@ -152,7 +152,7 @@
 		$("#listen-screen").show();
 		});
 
-var data = [5];
+var data = [150, 150];
 	var width = window.innerWidth - 20;
 var height = window.innerHeight - 20;
 
@@ -185,6 +185,13 @@ svg.selectAll("circle")
     .attr("r", function(d) { return d.radius; })
     .style("fill", function(d, i) { return "#3498DB" });
 
+
+//////////// ANTI GRAVITY RECT ////////////
+var rectangle = svg.append("circle")
+    .attr("cx", function() { return width / 2 })
+    .attr("cy", function() { return height / 2})
+    .attr("r", 50);
+
 force.on("tick", function(e) {
   var q = d3.geom.quadtree(nodes),
       i = 0,
@@ -197,12 +204,6 @@ force.on("tick", function(e) {
       .attr("cy", function(d) { return d.y; });
 });
 
-d3.select("svg")
-	.enter().append("circle")
-	.attr("cx", 150)
-	.attr("cy", 150)
-	.attr("r", 30)
-	.attr("fill", "red");
 
 function collide(node) {
   var r = node.radius + 30,
