--- a/www/index.html
+++ b/www/index.html
@@ -10,9 +10,15 @@
 <title>Hello World</title>
 </head>
 <body>
+ <!-- - - - - - - - - - - - - - - DEVELOPER NAV - - - - - - - - - - - - -->
+ <div id="navigation">
+ <a id="loading" class="nav-button" href="#"> Loading Page</a>
+<a id="main" class="nav-button" href="#"> Main Page</a>
+   <a id="record" class="nav-button" href="#">Record  </a>
+  <a id="listen" class="nav-button" href="#"> Listen</a>
+     </div>
   <!-- - - - - - - - - - - - - - - LOADING SCREEN - - - - - - - - - - - - -->
   <div id="loading-screen" class="screen">
-    <a id="next1" href="#" class="next">Next</a>
     <div class="bubble big-bubble"></div>
     <div class="bubble medium-bubble"></div>
     <div class="bubble small-bubble"></div>
@@ -22,10 +28,8 @@
   <div id="main-screen" class="screen">
     <audio id="audio" controls="contorls" autoplay></audio><div> </div>
     <button id="record">record</button>
-    <button id="next" class="hidden">next</button>
     <img id="play-button" class="button" src="img/play.png">
     <img id="record-button" class="button"src="img/record.png">
-    <a id="next2" href="#" class="next">Next</a>
   </div>
   <!-- - - - - - - - - - - - - - - LISTEN SCREEN - - - - - - - - - - - - -->
   <div id="listen-screen" class="screen">
@@ -43,6 +47,7 @@
 	<script src="js/jquery-2.1.1.min.js"> </script>
 	<script src="js/d3.v3.min.js"></script>
   <script src="js/start_screen.js"></script>
+  <script src="js/dev-nav.js"></script>
   <script src="js/promise.js"></script>
   <script src="js/parse.js"></script>
   <script src="js/record_parse_file.js"></script>
