--- a/www/index.html
+++ b/www/index.html
@@ -19,9 +19,7 @@
      </div>
   <!-- - - - - - - - - - - - - - - LOADING SCREEN - - - - - - - - - - - - -->
   <div id="loading-screen" class="screen">
-    <div class="bubble big-bubble"></div>
-    <div class="bubble medium-bubble"></div>
-    <div class="bubble small-bubble"></div>
+    <h1 id="loading-title"> loading...</h1>
 
   </div>
   <!-- - - - - - - - - - - - - - - MAIN SCREEN - - - - - - - - - - - - -->
@@ -31,6 +29,10 @@
     <img id="play-button" class="button" src="img/play.png">
     <img id="record-button" class="button"src="img/record.png">
   </div>
+  <!-- - - - - - - - - - - - - - - RECORDING SCREEN - - - - - - - - - - - - -->
+<div id="recording-screen" class="screen">
+ <img id="recording-button" class="button" src="img/record.png">
+</div>
   <!-- - - - - - - - - - - - - - - LISTEN SCREEN - - - - - - - - - - - - -->
   <div id="listen-screen" class="screen">
     <div id="tag-box">
