updated Dev Nav / Starting Functions

--- a/www/index.html
+++ b/www/index.html
@@ -14,7 +14,7 @@
  <div id="navigation">
  <a id="loading" class="nav-button" href="#"> Loading Page</a>
 <a id="main" class="nav-button" href="#"> Main Page</a>
-   <a id="record" class="nav-button" href="#">Record  </a>
+   <a id="record" class="nav-button" href="#">Recording  </a>
   <a id="listen" class="nav-button" href="#"> Listen</a>
      </div>
   <!-- - - - - - - - - - - - - - - LOADING SCREEN - - - - - - - - - - - - -->
@@ -31,7 +31,7 @@
   </div>
   <!-- - - - - - - - - - - - - - - RECORDING SCREEN - - - - - - - - - - - - -->
 <div id="recording-screen" class="screen">
- <img id="recording-button" class="button" src="img/record.png">
+ <img id="stop-recording-button" class-"button" src="img/stop.png">
 </div>
   <!-- - - - - - - - - - - - - - - LISTEN SCREEN - - - - - - - - - - - - -->
   <div id="listen-screen" class="screen">
