--- a/www/index.html
+++ b/www/index.html
@@ -12,28 +12,16 @@
 <body>
  <!-- - - - - - - - - - - - - - - DEVELOPER NAV - - - - - - - - - - - - -->
  <div id="navigation">
- <a id="loading" class="nav-button" href="#"> Loading Page</a>
 <a id="main" class="nav-button" href="#"> Main Page</a>
    <a id="record" class="nav-button" href="#">Recording  </a>
   <a id="listen" class="nav-button" href="#"> Listen</a>
      </div>
-  <!-- - - - - - - - - - - - - - - LOADING SCREEN - - - - - - - - - - - - -->
-  <div id="loading-screen" class="screen">
-    <a id="next1" href="#" class="next">Next</a>
-    <div class="bubble big-bubble"></div>
-    <div class="bubble medium-bubble"></div>
-    <div class="bubble small-bubble"></div>
-    <h1 id="loading-title"> loading...</h1>
-
-  </div>
   <!-- - - - - - - - - - - - - - - MAIN SCREEN - - - - - - - - - - - - -->
   <div id="main-screen" class="screen">
-    <audio id="audio" controls="contorls" autoplay></audio><div> </div>
+    <audio id="audio" controls="controls" autoplay></audio><div> </div>
     <button id="record">record</button>
     <img id="play-button" class="button" src="img/play.png">
     <img id="record-button" class="button" src="img/record.png">
-    <a id="next2" href="#" class="next">Next</a>
-    <img id="record-button" class="button"src="img/record.png">
   </div>
   <!-- - - - - - - - - - - - - - - RECORDING SCREEN - - - - - - - - - - - - -->
 <div id="recording-screen" class="screen">
