--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -41,8 +41,6 @@
   </div>
   <script type="text/javascript" src="cordova.js"></script>
 	<script src="js/jquery-2.1.1.min.js"> </script>
-	<script src="js/d3.v3.min.js"></script>
-  <script src="js/start_screen.js"></script>
   <script src="js/dev-nav.js"></script>
   <script src="js/promise.js"></script>
   <script src="js/parse.js"></script>
@@ -51,6 +49,7 @@
   </script>
   <script src="js/record_parse_file.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
+    <script src="js/functions.js"></script>
 
 </body>
 </html>
