--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -22,16 +22,25 @@
 </div>
 <!-- - - - - - - - - - - - - - - LISTEN SCREEN - - - - - - - - - - - - -->
 <div id="listen-screen" class="hidden screen">
-  <div id="tag-box">
-    <a href="#" class="tag">Funny</a>
-    <a href="#" class="tag">Annoying</a>
-    <a href="#" class="tag">Web-Design</a>
-    <a href="#" class="tag">Mom Gossip</a>
-  </div>
-  <img id="pause-button" class="button" src="img/pause.png">
-  <img id="stop-button" class-"button" src="img/stop.png">
-</div>
 
+  <!-- - - - - - - - - - - - - - - Tags SCREEN - - - - - - - - - - - - -->
+  <div id="tag-area" class="tag-area">
+    <input class="tag"></input>
+    <div class="tag">test-tag</div>
+    <div class="tag">test-tag</div>
+    <div class="tag">test-tag</div>
+    <div class="tag">test-tag</div>
+  </div>
+
+  <div class="slider-wrapper">
+    <hr id="hr" class="hr" noshade />
+  </div>
+
+
+  <div id="stop-button" ></div>
+
+
+</div>
   <script type="text/javascript" src="cordova.js"></script>
 	<script src="js/jquery-2.1.1.min.js"> </script>
   <script src="js/dev-nav.js"></script>
