Updated functions for tagging

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
 
   <!-- - - - - - - - - - - - - - - Tags SCREEN - - - - - - - - - - - - -->
   <div id="tag-area" class="tag-area">
-    <input class="tag"></input>
+    <input id="tag-input" class="tag"></input>
     <div class="tag">test-tag</div>
     <div class="tag">test-tag</div>
     <div class="tag">test-tag</div>
