--- a/www/index.html
+++ b/www/index.html
@@ -39,6 +39,7 @@
       <div id="stop-button" ></div>
     </div>
     <script type="text/javascript" src="cordova.js"></script>
+    <script src="js/hammer.js" ></script>
     <script src="js/jquery-2.1.1.min.js"> </script>
     <script src="js/dev-nav.js"></script>
     <script src="js/promise.js"></script>
