--- a/www/index.html
+++ b/www/index.html
@@ -15,8 +15,9 @@
     <!-- - - - - - - - - - - - - - - MAIN SCREEN - - - - - - - - - - - - -->
     <div id="main-screen" class="screen">
       <audio id="audio" class="hidden"  autoplay></audio><div> </div>
-      <img id="play-button" class="button" src="img/play-new.png">
-      <img id="record-button" class="button" src="img/record-new.png">
+      <img id="play-button" class="button" src="img/play-new.png"> 
+
+      <img id="record-button" class="button" src="img/record.png">
     </div>
     <!-- - - - - - - - - - - - - - - RECORDING SCREEN - - - - - - - - - - - - -->
     <div id="recording-screen" class="hidden screen">
