--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,7 @@
       <audio id="audio" class="hidden"  autoplay></audio><div> </div>
       <img id="play-button" class="button" src="img/play-new.png"> 
 
-      <img id="record-button" class="button" src="img/record.png">
+      <img id="record-button" class="button" src="img/record-new.png">
     </div>
     <!-- - - - - - - - - - - - - - - RECORDING SCREEN - - - - - - - - - - - - -->
     <div id="recording-screen" class="hidden screen">
