--- a/www/index.html
+++ b/www/index.html
@@ -26,13 +26,9 @@
     <!-- - - - - - - - - - - - - - - LISTEN SCREEN - - - - - - - - - - - - -->
     <div id="listen-screen" class="hidden screen">
       <!-- - - - - - - - - - - - - - - Tags SCREEN - - - - - - - - - - - - -->
-      <div id="tag-area" class="tag-area">
-        <input id="tag-input" class="tag"></input>
-        <div class="tag">test-tag</div>
-        <div class="tag">test-tag</div>
-        <div class="tag">test-tag</div>
-        <div class="tag">test-tag</div>
-      </div>
+      <img src="img/up.png" id="voteup" />
+      <div id="upvotes">0</div>
+      <img src="img/down.png" id="votedown" />
       <div class="slider-wrapper">
         <hr id="hr" class="hr" noshade />
       </div>
