--- a/platforms/ios/www/index.html
+++ b/platforms/ios/www/index.html
@@ -10,14 +10,14 @@
     <title>Hello World</title>
   </head>
   <script>
- navigator.splashscreen.show();
   </script>
   <body>
     <!-- - - - - - - - - - - - - - - MAIN SCREEN - - - - - - - - - - - - -->
     <div id="main-screen" class="screen">
       <audio id="audio" class="hidden"  autoplay></audio><div> </div>
-      <img id="play-button" class="button" src="img/play.png">
-      <img id="record-button" class="button" src="img/record.png">
+      <img id="play-button" class="button" src="img/play-new.png"> 
+
+      <img id="record-button" class="button" src="img/record-new.png">
     </div>
     <!-- - - - - - - - - - - - - - - RECORDING SCREEN - - - - - - - - - - - - -->
     <div id="recording-screen" class="hidden screen">
@@ -26,13 +26,9 @@
     <!-- - - - - - - - - - - - - - - LISTEN SCREEN - - - - - - - - - - - - -->
     <div id="listen-screen" class="hidden screen">
       <!-- - - - - - - - - - - - - - - Tags SCREEN - - - - - - - - - - - - -->
-      <div id="tag-area" class="tag-area">
-        <input id="tag-input" class="tag"></input>
-        <div class="tag">test-tag</div>
-        <div class="tag">test-tag</div>
-        <div class="tag">test-tag</div>
-        <div class="tag">test-tag</div>
-      </div>
+      <img src="img/up.png" id="voteup" />
+      <div id="upvotes">0</div>
+      <img src="img/down.png" id="votedown" />
       <div class="slider-wrapper">
         <hr id="hr" class="hr" noshade />
       </div>
